第一周第4题和学习内容小结